@@ -1,18 +1,0 @@
-## Interface: 20400
-## Title: FlashFrames
-## Notes: Test for LibBars-1.0
-## Author: Antiarc
-## OptionalDeps: Ace3, LibSharedMedia-3.0, LibBars-1.0
-## X-Embeds: Ace3, LibSharedMedia-3.0, LibBars-1.0
-## X-Curse-Packaged-Version: r14-beta
-## X-Curse-Project-Name: LibBars-1.0
-## X-Curse-Project-ID: libbars-1-0
-## X-Curse-Repository-ID: wow/libbars-1-0/mainline
-
-Libs\LibStub\LibStub.lua
-Libs\CallbackHandler-1.0\CallbackHandler-1.0.xml
-Libs\AceAddon-3.0\AceAddon-3.0.xml
-Libs\AceEvent-3.0\AceEvent-3.0.xml
-Libs\LibBars-1.0\lib.xml
-Libs\LibSharedMedia-3.0\lib.xml
-FlashFrames.lua
